packages/cashc/test/compiler/ParseError/misspelled_covenant.cash
contract Test() {
    return {
        covenant() {
            // cspell:disable-next-line
            require(tx.verson == 2);
        }
    }
}
